--- a/examples/Programming a Stratego Player.ipynb
+++ b/examples/Programming a Stratego Player.ipynb
@@ -2,74 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "a47a1b70-c7eb-4cf9-a977-1a9df58d6351",
+   "execution_count": 3,
+   "id": "c1f11d62-80cb-4caa-b2a4-6b3fe22103b5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "len(labels):  2160\n"
+      "2024-10-09 23:13:56.050483: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-09 23:13:56.050515: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-09 23:13:56.050556: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-09 23:13:56.058308: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-10-09 23:13:56.793583: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2024-10-09 23:13:57.307947: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.548552: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.548764: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.549947: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.550124: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.550276: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.650780: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.650977: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.651169: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-10-09 23:13:57.651315: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1886] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1092 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:09:00.0, compute capability: 8.6\n"
      ]
-    }
-   ],
-   "source": [
-    "def create_stratego_labels():\n",
-    "    labels_array = []\n",
-    "    letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
-    "    numbers = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']\n",
-    "    for l1 in range(10):\n",
-    "        for n1 in range(10):\n",
-    "            '''\n",
-    "            # For normal unit movement\n",
-    "            [(l1 + a, n1) for a in [-1, 1]]\n",
-    "            [(l1, n1 + b) for b in [-1, 1]]\n",
-    "\n",
-    "            # For scount unit movement\n",
-    "            [(t, n1) for t in range(10)]\n",
-    "            [(l1, t) for t in range(10)]\n",
-    "            '''\n",
-    "            destinations = [(l1 + a, n1) for a in [-1, 1]] + \\\n",
-    "                           [(l1, n1 + b) for b in [-1, 1]] + \\\n",
-    "                           [(t, n1) for t in range(10)] + \\\n",
-    "                           [(l1, t) for t in range(10)]\n",
-    "            \n",
-    "            for (l2, n2) in destinations:\n",
-    "                if (l1, n1) != (l2, n2) and l2 in range(10) and n2 in range(10):\n",
-    "                    move = letters[l1] + numbers[n1] + letters[l2] + numbers[n2]\n",
-    "                    labels_array.append(move)\n",
-    "\n",
-    "    return labels_array\n",
-    "\n",
-    "labels = create_stratego_labels()\n",
-    "print(\"len(labels): \", len(labels))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "99e5d265-2852-4703-bfcb-30f8316076bb",
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a:  -1\n",
-      "a:  1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3,), dtype=float32, numpy=array([0.09003057, 0.24472848, 0.6652409 ], dtype=float32)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for a in [-1, 1]:\n",
-    "    print(\"a: \", a)"
+    "import tensorflow as tf\n",
+    "\n",
+    "softmax = tf.nn.softmax([-1, 0., 1.])\n",
+    "softmax"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1f11d62-80cb-4caa-b2a4-6b3fe22103b5",
+   "id": "781f9946-3c1d-44fb-b76f-3cd3d798a5e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,9 +57,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "selfplay_env",
+   "display_name": "hide_env",
    "language": "python",
-   "name": "selfplay_env"
+   "name": "hide_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -91,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
